2008-02-21  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs: Added resize in toolbox
	  refresh.

2008-02-21  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs: Fixed little dnd bug.

2008-02-21  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs,
	  MonoDevelop.DesignerSupport.Toolbox/ToolboxWidget.cs: Replaced old
	  toolbox with a new one.

2008-02-09  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.DesignerSupport.addin.xml: Removed source editor dependency.

2008-02-01  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport/BindingService.cs: If no specific part is
	  specified when adding a member to a class, add it to the first part.
	  Fixes an error in the ASP.NET designer (and anything else using the
	  binding service without explicitly specifying class parts).

2008-01-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.addin.xml, MonoDevelop.DesignerSupport.mdp,
	  Makefile.am, icons/toolbox-pad-16.png, icons/properties-pad-16.png: New
	  tango icons by Vinicius Depizzol.
	* MonoDevelop.DesignerSupport.PropertyGrid.Editors/BooleanEditorCell.cs:
	  Properly draw checkboxes.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.addin.xml: Update MD version.

2008-01-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs: Use the correct class to
	  get the node_hash private field.

2008-01-21  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.PropertyGrid/PropertyGrid.cs: Use a smaller
	  toolbar.

2008-01-02  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.DesignerSupport/CodeBehindService.cs: Improve error reporting
	  for invalid IClasses.

2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.DesignerSupport.mdp: Updated project files. The order of