@@ -1,3 +1,9 @@
+2008-02-22  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.DesignerSupport/ToolboxService.cs,
+	  MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs: Added some support for
+	  view dynamic providers.
+
 2008-02-21  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.DesignerSupport.Toolbox/Toolbox.cs: Added resize in toolbox
